syntax = "proto3";

package auth;

option go_package = "github.com/Mikhalevich/filesharing/pkg/proto/auth";

import "types/types.proto";

service AuthService {
  rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Auth(AuthUserRequest) returns (AuthUserResponse) {}
  rpc AuthPublicUser(AuthPublicUserRequest) returns (AuthPublicUserResponse) {}
}

enum Status {
    Ok = 0;
    AlreadyExist = 1;
    NotExist = 2;
    PwdNotMatch = 3;
}

message CreateUserRequest {
    types.User user = 1;
}

message CreateUserResponse {
    Status status = 1;
    types.Token token = 2;
}

message AuthUserRequest {
    types.User user = 1;
}

message AuthUserResponse {
    Status status = 1;
    types.Token token = 2;
}

message AuthPublicUserRequest {
    string name = 1;
}

message AuthPublicUserResponse {
    types.Token token = 2;
}
